Apply cors for sesame-api-gateway